# Codot

./: .gitignore  .gutconfig.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ethereal_shield.gd  ethereal_shield.gd.uid  ethereal_shield.gdshader  ethereal_shield.gdshader.uid  ethereal_shield.tscn  icon.svg.import  particle_demo.tscn  project.godot  test_error_capture.gd  test_error_capture.gd.uid  test_error_scene.tscn  test_error_script.gd.uid  test_output.tscn  test_scene.tscn
addons/codot/: README.md  ai_chat_dock.gd  ai_chat_dock.gd.uid  codot.gd  codot.gd.uid  codot_panel.gd  codot_panel.gd.uid  codot_panel.tscn  codot_project_config.gd  codot_project_config.gd.uid  codot_settings.gd  codot_settings.gd.uid  command_handler.gd  command_handler.gd.uid  command_handler_old.gd  command_handler_old.gd.uid  debugger_plugin.gd  debugger_plugin.gd.uid  game_connector.gd  game_connector.gd.uid  input_simulator.gd  input_simulator.gd.uid  output_capture.gd  output_capture.gd.uid  plugin.cfg  websocket_server.gd  websocket_server.gd.uid
docs/: TODO.md  codot-mcp-diagnostic-report-2.md  codot-mcp-diagnostic-report.md  how-to-use.md
mcp-server/: README.md  check_and_stop.py  create_ethereal_shield.py  create_ethereal_shield_v2.py  demo_create_particles.py  full_test.py  mock_vscode_server.py  pyproject.toml  quick_diag.py  run_shield.py  test_all_commands.py  test_capture.py  test_comprehensive.py  test_error_capture.py  test_integration.py  test_open_script.py  test_output_methods.py  test_plugins.py  test_scene_creation.py
mcp-server/codot/: __init__.py  commands.py  godot_client.py  server.py
mcp-server/tests/: __init__.py  test_automation.py  test_godot_client.py
mcp-src/: README.md  diagnose_debugger.py  pyproject.toml  test_connection.py  test_editor_state.py  test_vscode_bridge.py
mcp-src/codot/: commands.py  godot_client.py
mcp-src/tests/: test_commands.py  test_godot_client.py
scripts/: validate-codebase.py
test/integration/: test_plugin_integration.gd  test_plugin_integration.gd.uid
test/scenes/: test_error_capture.tscn  test_error_script.gd  test_output.gd  test_output.gd.uid
test/unit/: test_animation_commands.gd  test_animation_commands.gd.uid  test_autoload_commands.gd  test_autoload_commands.gd.uid  test_codot_panel.gd  test_codot_panel.gd.uid  test_codot_settings.gd  test_codot_settings.gd.uid  test_command_handler.gd  (+25 more)
vscode-extension/: LICENSE  README.md  package-lock.json  package.json
(+37 files in other folders)
