[project]
name = "codot"
version = "0.1.0"
description = "MCP server for AI agent integration with Godot game engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["godot", "mcp", "ai", "game-development", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [
    {name = "Joe Cox"}
]
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/codot"
Documentation = "https://github.com/yourusername/codot/blob/main/docs/how-to-use.md"
Repository = "https://github.com/yourusername/codot"
Issues = "https://github.com/yourusername/codot/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
codot-server = "codot.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codot"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
